k8s/hetzner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: honeywatch
  labels:
    name: honeywatch
