k8s/hetzner/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: honeywatch
  namespace: honeywatch
  labels:
    app: honeywatch
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: honeywatch-api-ratelimit@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - honey.piotrkrzysztof.dev
      secretName: honeywatch-tls
  rules:
    - host: honey.piotrkrzysztof.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: honeypot-api
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 80
